--- a/app/projects/projects.module.css
+++ b/app/projects/projects.module.css
@@ -1,11 +1,14 @@
 
+.projectText {
+    overflow: auto;
+}
+
 
 .projects {
     width: 100%;
     height: 100%;
     display: flex;
-    flex-wrap: wrap;    
-}
+    flex-wrap: wrap;}
 
 .singleProject {
     display: flex;
